--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sneha ♥ Arpan</title>
+	<title>Snehaa ♥ Arpan</title>
 </head>
 <body>
 	<p> I lovve youu</p>
